--- a/style.css
+++ b/style.css
@@ -3,3 +3,19 @@
 .foodModal {
     cursor: pointer;
 }
+
+.modal ul {
+    list-style: none;
+    /* Remove list bullets */
+    padding: 0;
+    margin: 0;
+}
+
+.modal li:before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f14a";
+    /* content that looks like bullets */
+    padding-right: 8px;
+    color: tomato;
+}
