--- a/style.css
+++ b/style.css
@@ -4,18 +4,29 @@
     cursor: pointer;
 }
 
-.modal ul {
+
+/* li:empty {
+    display: none;
+} */
+
+
+/* Remove list bullets */
+
+
+/* .modal ul {
     list-style: none;
-    /* Remove list bullets */
     padding: 0;
     margin: 0;
-}
+} */
 
-.modal li:before {
+
+/* content that looks like bullets */
+
+
+/* .modal p:before {
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
     content: "\f14a";
-    /* content that looks like bullets */
     padding-right: 8px;
     color: tomato;
-}
+} */
